--- a/geoportailv3/static/js/query/default_gisgr.html
+++ b/geoportailv3/static/js/query/default_gisgr.html
@@ -5,22 +5,22 @@
       <h4>{{feature.attributes.label | translate }}</h4>
       <div ng-if="ctrl.hasAttributes(feature)" ng-repeat="entry in attributes | orderBy: (layers.ordered ? '' : 'key')">
         <span ng-if="!ctrl.isEmpty(entry['value'])">
-          <span ng-if="entry['key'].indexOf('f_en_') == 0 && ctrl.language == 'en'">
+          <span ng-if="entry['key'].toLowerCase().indexOf('f_en_') == 0 && ctrl.language == 'en'">
               <label>{{entry['key'] | translate}}</label> :
               <span ng-if="!ctrl.isLink(entry['value'])" ng-bind-html="ctrl.trustAsHtml(entry['value'])"></span>
               <a ng-if="ctrl.isLink(entry['value'])" ng-href="{{entry['value']}}" target="_blank">{{entry['value']}}</a>
           </span>
-          <span ng-if="entry['key'].indexOf('f_fr_') == 0 && ctrl.language == 'fr'">
+          <span ng-if="entry['key'].toLowerCase().indexOf('f_fr_') == 0 && ctrl.language == 'fr'">
               <label>{{entry['key'] | translate}}</label> :
               <span ng-if="!ctrl.isLink(entry['value'])" ng-bind-html="ctrl.trustAsHtml(entry['value'])"></span>
               <a ng-if="ctrl.isLink(entry['value'])" ng-href="{{entry['value']}}" target="_blank">{{entry['value']}}</a>
           </span>          
-          <span ng-if="entry['key'].indexOf('f_de_') == 0 && ctrl.language == 'de'">
+          <span ng-if="entry['key'].toLowerCase().indexOf('f_de_') == 0 && ctrl.language == 'de'">
               <label>{{entry['key'] | translate}}</label> :
               <span ng-if="!ctrl.isLink(entry['value'])" ng-bind-html="ctrl.trustAsHtml(entry['value'])"></span>
               <a ng-if="ctrl.isLink(entry['value'])" ng-href="{{entry['value']}}" target="_blank">{{entry['value']}}</a>
           </span>
-          <span ng-if="entry['key'].indexOf('f_de_') < 0 && entry['key'].indexOf('f_fr_') < 0 && entry['key'].indexOf('f_en_') < 0">
+          <span ng-if="entry['key'].toLowerCase().indexOf('f_de_') < 0 && entry['key'].toLowerCase().indexOf('f_fr_') < 0 && entry['key'].toLowerCase().indexOf('f_en_') < 0">
             <label>{{entry['key'] | translate}}</label> :
             <span ng-if="!ctrl.isLink(entry['value'])" ng-bind-html="ctrl.trustAsHtml(entry['value'])"></span>
             <a ng-if="ctrl.isLink(entry['value'])" ng-href="{{entry['value']}}" target="_blank">{{entry['value']}}</a>
