--- a/geoportailv3/static/js/layerinfo/popup.html
+++ b/geoportailv3/static/js/layerinfo/popup.html
@@ -31,7 +31,7 @@
   </dd>
   <dt ng-if="content.uid.length > 0" translate>Link to the metadata</dt>
   <dd ng-if="content.uid.length > 0"><a target ="_blank" 
-         href="https://www.geoportail.lu/Portail/menuAction.do?lang=fr&dispatch=load&menuToLoad=inspireViewMetadataExt&uid={{content.uid}}">
+         href="https://shop.geoportail.lu/Portail/menuAction.do?lang=fr&dispatch=load&menuToLoad=inspireViewMetadataExt&uid={{content.uid}}">
       link
       </a>
   </dd>
