topogg replaces the topogr_global

--- a/jsapi/examples/index.html
+++ b/jsapi/examples/index.html
@@ -429,7 +429,7 @@ map8.addMyMapLayer({
         <pre>
 var map9 = new lux.Map({
   target: 'map9',
-  bgLayer: 'topogr_global',
+  bgLayer: 'topogg',
   zoom: 12,
   position: [76825, 75133]
 });
@@ -452,7 +452,7 @@ map9.addMyMapLayer({
         <pre>
 var map10 = new lux.Map({
   target: 'map10',
-  bgLayer: 'topogr_global',
+  bgLayer: 'topogg',
   zoom: 12,
   position: [76825, 75133]
 });
@@ -962,7 +962,7 @@ var map7 = new lux.Map({
 
 var map8 = new lux.Map({
   target: 'map8',
-  bgLayer: 'topogr_global',
+  bgLayer: 'topogg',
   zoom: 12,
   position: [76825, 75133]
 });
