--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
@@ -52,7 +52,7 @@
       </button>
     </div>
     <div ng-if="!$ctrl.hasData() && !$ctrl.networkStatus.isDisconnected()">
-      <button type="button" class="new-data btn btn-default"
+      <button type="button" class="new-data btn btn-default" ng-if="false"
               ng-click="$ctrl.toggleViewExtentSelection()"
               translate>Save new map
       </button>
