--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/map/map.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/map/map.html
@@ -1,5 +1,5 @@
 <div ngeo-map="ctrl.map">
-  <app-toggle-3d ng-if="ctrl.enable3DMode"></app-toggle-3d>
+  <app-toggle-3d ng-if="(ctrl.enable3DMode == 1)"></app-toggle-3d>
   <app-infobar app-infobar-map="::ctrl.map"></app-infobar>
 </div>
 
