deactivate offline download

--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
@@ -51,12 +51,12 @@
               translate>Delete data
       </button>
     </div>
-    <div ng-if="!$ctrl.hasData() && !$ctrl.networkStatus.isDisconnected()">
+    <!-- <div ng-if="!$ctrl.hasData() && !$ctrl.networkStatus.isDisconnected()">
       <button type="button" class="new-data btn btn-default" ng-if="false"
               ng-click="$ctrl.toggleViewExtentSelection()"
               translate>Save new map
       </button>
-    </div>
+    </div> -->
   </div>
 </ngeo-modal>
 
