--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
@@ -1,4 +1,4 @@
-<div class="main-button">
+<div ng-if="($ctrl.enable3DMode == 1)" class="main-button">
   <span ng-if="!$ctrl.hasData()">
     <div class="no-data" ng-click="$ctrl.toggleViewExtentSelection()"></div>
   </span>
@@ -51,12 +51,12 @@
               translate>Delete data
       </button>
     </div>
-    <!-- <div ng-if="!$ctrl.hasData() && !$ctrl.networkStatus.isDisconnected()">
+    <div ng-if="!$ctrl.hasData() && !$ctrl.networkStatus.isDisconnected()">
       <button type="button" class="new-data btn btn-default" ng-if="false"
               ng-click="$ctrl.toggleViewExtentSelection()"
               translate>Save new map
       </button>
-    </div> -->
+    </div>
   </div>
 </ngeo-modal>
 
