added dedicated enableOfflineDownload variable

--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/offlineNgeoComponent.html
@@ -1,4 +1,4 @@
-<div ng-if="($ctrl.enable3DMode == 1)" class="main-button">
+<div ng-if="($ctrl.enableOfflineDownload == 1)" class="main-button">
   <span ng-if="!$ctrl.hasData()">
     <div class="no-data" ng-click="$ctrl.toggleViewExtentSelection()"></div>
   </span>
