--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/authentication/authentication.html
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/authentication/authentication.html
@@ -8,8 +8,8 @@
               <input type="password" ng-model="ctrl.password" placeholder="{{'Password'| translate}}" />
               <input type="submit" value="{{'Submit'| translate}}" />
                 <div class="clearfix">
-                    <p><a target="_blank" href="https://myaccount.geoportail.lu/lostpassword?lang={{ctrl.lang}}" translate>I lost my password</a></p>
-                    <p><a target="_blank" href="https://myaccount.geoportail.lu/newaccount?lang={{ctrl.lang}}" translate>Create a new user account</a></p>
+                    <p><a target="_blank" href="https://myaccount.gis-gr.eu/lostpassword?lang={{ctrl.lang}}" translate>I lost my password</a></p>
+                    <p><a target="_blank" href="https://myaccount.gis-gr.eu/newaccount?lang={{ctrl.lang}}" translate>Create a new user account</a></p>
                 </div>
             </form>
             <div ng-if="ctrl.isAuthenticated()">
@@ -18,7 +18,7 @@
                     <li><p>{{ctrl.getEmail()}}</p></li>
                 </ul>
                 <div class="pull-right">
-                  <a target="_blank" href="https://myaccount.geoportail.lu?lang={{ctrl.lang}}" class="btn btn-link" translate>My account</a>
+                  <a target="_blank" href="https://myaccount.gis-gr.eu?lang={{ctrl.lang}}" class="btn btn-link" translate>My account</a>
                   <button class="btn btn-default" ng-click="ctrl.logout()" translate>Logout</button>
                 </div>
                 <div class="clearfix"></div>
